# amux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-commit-test.sh
.github/workflows/: build.yml
.letta/: settings.json  settings.local.json
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: app_bootstrap.rs  crash.rs  drag.rs  gpui_browser.rs  gpui_clipboard.rs  gpui_command_bar.rs  gpui_command_palette.rs  gpui_compare_task.rs  gpui_components.rs  gpui_config.rs  gpui_diff_panel.rs  gpui_entry.rs  gpui_entry_render.rs  gpui_input_handler.rs  gpui_keyboard_shortcuts.rs  gpui_layout_renderer.rs  gpui_pickers.rs  gpui_preview.rs  gpui_status_bar.rs  gpui_surface_views.rs  gpui_task_bar.rs  gpui_terminal.rs  gpui_terminal_component.rs  gpui_vibe_tools.rs  gpui_workspace_persistence.rs  gpui_workspace_sidebar.rs  main.rs  menu.rs  metrics.rs  palette_dispatch.rs  preview_open.rs  preview_search.rs  preview_selection.rs  preview_shortcuts.rs  preview_toc.rs  search.rs  state.rs  tab_intercept.rs  text_entry.rs  theme.rs
apps/desktop/src/git_panel/: diff.rs  mod.rs  model.rs  ops.rs  status.rs
apps/desktop/src/workbench/: command.rs  events.rs  mod.rs  model.rs  prompt.rs  store.rs
assets/: amux.desktop
crates/amux-agent/: Cargo.toml
crates/amux-agent/src/: detect.rs  launch.rs  lib.rs  profiles.rs  provider.rs  registry.rs
crates/amux-core/: Cargo.toml
crates/amux-core/src/: bridge.rs  command.rs  event.rs  ids.rs  lib.rs
crates/amux-core/src/layout/: mod.rs  model.rs  ops.rs
crates/amux-core/src/session/: migrate.rs  mod.rs  model.rs  ops.rs
crates/amux-core/src/surface/: agent.rs  editor.rs  file_tree.rs  mod.rs  preview.rs  terminal.rs
crates/amux-core/src/workspace/: mod.rs  model.rs  ops.rs  target.rs
crates/amux-platform/: Cargo.toml
crates/amux-platform/examples/: terminal_throughput.rs
crates/amux-platform/src/: agent_monitor.rs  ai_usage.rs  capabilities.rs  dirs.rs  fs.rs  lib.rs  path_mapper.rs  process.rs  services.rs  shell.rs  socket_notify.rs  sys_metrics.rs  terminal_output.rs
crates/amux-platform/src/common/: clipboard.rs  dialogs.rs  metrics.rs  mod.rs
crates/amux-platform/src/linux/: mod.rs
crates/amux-platform/src/macos/: mod.rs
crates/amux-platform/src/terminal/: alacritty_view.rs  backend.rs  emulator.rs  keys.rs  manager.rs  mod.rs  osc_intercept.rs  session.rs  view.rs
crates/amux-platform/src/unix/: mod.rs
crates/amux-platform/src/windows/: conpty.rs  mod.rs  paths.rs  platform.rs  wsl.rs  wsl_detection.rs  wsl_fs.rs
crates/amux-platform/tests/: osc_smoke.rs  pty_smoke.rs  render_grid_layout.rs
crates/amux-session/: Cargo.toml
crates/amux-session/src/: codec.rs  lib.rs  paths.rs  store.rs
crates/amux-ui/: Cargo.toml
crates/amux-ui/src/: commands.rs  controller.rs  lib.rs  root.rs  state.rs
crates/amux-ui/src/components/: agent_launcher.rs  command_palette.rs  file_explorer.rs  mod.rs  open_files.rs  pane_grid.rs  tab_strip.rs  title_bar.rs  workspace_sidebar.rs
crates/amux-ui/src/panels/: activity_panel.rs  mod.rs
crates/amux-ui/src/render/: gpui.rs  mod.rs  text.rs
crates/amux-ui/src/surfaces/: mod.rs
crates/amux-workspace/: Cargo.toml
crates/amux-workspace/src/: file_tree.rs  filter.rs  lib.rs  manager.rs  recent.rs  watcher.rs
docs/: BUILD_ISSUES.md  HANDOFF-CANVAS-RENDERING.md  HANDOFF-SESSION-2.md  agent-bridge.md  agent-workbench-development-plan.md  amux-enhanced-capabilities.md  clickable-paths-design.md  code-hygiene-design.md  diff-panel-design.md  handoff-browser-input.md  prompt-library-design.md  prowl-migration-analysis.md  terminal-rendering-invariants.md
plans/: agent-bridge-plan.md  agent-notification-pet.md  agent-orchestration-product.md  amux-development-plan.md  amux-technical-design.md  architecture-map.md  cross-platform-architecture-plan.md  cross-platform-implementation-tasks.md  developer-handoff.md  feature-roadmap-vibe-coding.md  multi-agent-brainstorm.md  next-tasks.md  osc-integration-spec.md  pane-tab-types-plan.md  preview-text-selection-spec.md  vibe-coding-feature-wishlist.md  webview-pane-plan.md
rules/: approach.md
scripts/: build.ps1  build.sh
