[workspace]
members = [
    "apps/desktop",
    "crates/amux-core",
    "crates/amux-platform",
    "crates/amux-agent",
    "crates/amux-workspace",
    "crates/amux-session",
    "crates/amux-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt"] }

# Terminal emulation
alacritty_terminal = "0.25"

# Cross-platform PTY support
portable-pty = "0.8"

# System information (CPU, memory, processes)
sysinfo = "0.32"

# Cross-platform clipboard
arboard = "3.6"

# Native file dialogs
rfd = "0.17"

# For async Read/Write traits
futures-lite = "2"

