[package]
name = "amux-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary is named "Amux" so macOS shows "Amux" in the menu bar.
# The package name stays "amux-desktop" so `cargo run -p amux-desktop`
# still works.
[[bin]]
name = "Amux"
path = "src/main.rs"

[features]
default = []
# Base GPUI feature (all platforms)
gpui = ["amux-ui/gpui", "dep:gpui", "dep:gpui_platform", "dep:smol", "dep:pulldown-cmark", "dep:wry", "dep:raw-window-handle", "dep:gpui-component"]
# Linux-specific: enable both Wayland and X11 backends
gpui-linux = ["gpui", "gpui_platform/wayland", "gpui_platform/x11"]

[dependencies]
amux-core = { path = "../../crates/amux-core" }
amux-platform = { path = "../../crates/amux-platform" }
alacritty_terminal.workspace = true
serde_json.workspace = true
amux-ui = { path = "../../crates/amux-ui" }
serde.workspace = true
toml = "0.8"
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
gpui-component = { git = "https://github.com/longbridge/gpui-component", optional = true }
pulldown-cmark = { version = "0.12", optional = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", optional = true, features = ["font-kit"] }
smol = { version = "2", optional = true }
wry = { version = "0.53", optional = true }
raw-window-handle = { version = "0.6", optional = true }
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }
# Native folder picker. Used via AsyncFileDialog from cx.spawn so the dialog
# runs on the main NSApp loop *outside* a GPUI listener stack frame, which
# avoids the RefCell re-entrancy panic that the synchronous variant triggers
# (see prompt_open_local_workspace).
rfd.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Native AppKit access for setting the Dock icon at runtime. Already
# pulled into the workspace transitively by gpui_macos and arboard, so
# this dep adds no new compile cost — it just makes the symbols
# directly reachable from amux-desktop. Used by `set_macos_dock_icon`
# in main.rs to give the dev-mode `cargo run` binary a real Dock icon
# even before we ship a packaged .app bundle.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
tempfile = "3.21"

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh"] }
tempfile = "3.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"