[package]
name = "amux-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amux-core = { path = "../amux-core" }

# Terminal emulation (Alacritty's battle-tested backend)
alacritty_terminal = "0.25"

# Cross-platform PTY support
portable-pty = "0.8"

# Async runtime for reading PTY output
tokio = { version = "1", features = ["sync", "rt"] }

# For async Read/Write traits
futures-lite = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System information (CPU, memory, processes)
sysinfo = "0.32"

# Cross-platform clipboard (text + image). Used by ArboardClipboardService.
arboard = "3.6"

# Native file dialogs (folder picker). rfd 0.17's default features are
# `xdg-portal + wayland` on Linux (no GTK3 C deps), and AppKit/Win32 on
# macOS/Windows where the Linux backend choice has no effect.
rfd = "0.17"

