[package]
name = "amux-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amux-core = { path = "../amux-core" }

# Terminal emulation (Alacritty's battle-tested backend)
alacritty_terminal.workspace = true

# Cross-platform PTY support
portable-pty.workspace = true

# Async runtime for reading PTY output
tokio.workspace = true

# For async Read/Write traits
futures-lite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# System information (CPU, memory, processes)
sysinfo.workspace = true

# Cross-platform clipboard (text + image). Used by ArboardClipboardService.
arboard.workspace = true

# Native file dialogs (folder picker). rfd 0.17's default features are
# `xdg-portal + wayland` on Linux (no GTK3 C deps), and AppKit/Win32 on
# macOS/Windows where the Linux backend choice has no effect.
rfd.workspace = true

# Process group kill on Unix
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[dev-dependencies]
# vte's `ansi` feature exposes `Processor` — the same parser alacritty
# uses internally to drive Term. Used by examples/terminal_throughput.
vte = { version = "0.15", features = ["ansi"] }

[[example]]
name = "terminal_throughput"
path = "examples/terminal_throughput.rs"

